Add English Translations.

--- a/cn/index.html
+++ b/cn/index.html
@@ -177,7 +177,7 @@
                     	<div class="col-xs-10  col-md-6 bg-light rounded-right">
                             <div class="p-3">
                                 <h3 class="section-item-in-text">形随意动致力于改变世界创建和交付应用的方式，用技术的力量帮助企业实现数字化转型。</h3>
-                                <h3 class="section-item-in-text"> 准备好通向互联网之路了吗？</h3>
+                                <h3 class="section-item-in-text"> 准备好通向互联网之路了吗?</h3>
                             </div>
                             <button class="btn btn-outline-primary m-3">了解更多</button>
                         </div>
