--- a/en/cooperation.html
+++ b/en/cooperation.html
@@ -50,11 +50,9 @@
     
         <!--[if lt IE 9]>
             <div class="alert alert-warning flex" role="alert">
-          你的浏览器太久了，请升级再访问本网站 
-          <br>
-           Your Browser is too old.Please click the fllowing link to upgrade your browser.
-          <a href="http://browsehappy.com" class="alert-link">点我升级</a>
-        </div>
+                Your Browser is too old.Please click the fllowing link to upgrade your browser.
+                <a href="http://browsehappy.com" class="alert-link">Update</a>
+            </div>
         <![endif]-->
         
         <!-- Header Start -->
@@ -100,18 +98,18 @@
         <!-- Section Start -->
         <div class="section-member">
             <div class="container">
-                <h1 class="section-text-tittle">合作</h1>
-                <h2 class="section-text-little-tittle">互利共赢, 精诚合作, 透明公开</h2>
+                <h1 class="section-text-tittle">Cooperation</h1>
+                <h2 class="section-text-little-tittle">Transparent and Open, Mutal Benefit for Both Side</h2>
                 <hr />
-                <h3>合作方向</h3>
-                <p class="lead">信息共享, 项目协作, 团队联盟, 技术支持</p>
+                <h3>Area of Cooperation</h3>
+                <p class="lead">Sharing of Infomation, Project Collaboration, Tech Support</p>
                 <ul>
-                    <li>企业/团队 管理服务定制(ERP, 业绩考核系统定制)</li>
-                    <li>企业/个人 网站定制</li>
-                    <li>企业/店面/活动 网络环境安全定制(场地WIFI安全和稳定性保证, 阻截ARP包, 进行AP隔离, 内容审核[拦截部分网址], 企业虚拟专用网络搭建)</li>
-                    <li>绿色环保/科技交流活动合作(合作可以包含我们提供的: 免费宣传视频制作, 免费网页制作, 免费网站托管, 但形随意动将算作此次活动的赞助商或联合举办人)</li>
-                    <li>团队联盟(共同项目研发, 互换友链, 共有资料交换, 可获得形随意动赠送的免费网站托管服务和邮箱托管服务)</li>
-                    <li>项目交互流程定制(Dev-Ops)</li>
+                    <li>Enterprise / team management service customization (ERP, customized performance assessment system)</li>
+                    <li>Enterprise / personal website customization</li>
+                    <li>Enterprise / event WIFI environment customization (WIFI safety and stability guarantee, intercepting ARP package, AP isolation, content Censor, enterprise virtual private network).</li>
+                    <li>Cooperation in green environmental protection / technology exchange activities (Cooperation can include what we offer: free publicity video production, free webpage production, free website hosting, but Interactive+ will be counted as one of the sponsors of this event.)</li>
+                    <li>Team Alliance (project R &amp; D, exchange of links, data exchange, free website hosting service)</li>
+                    <li>Project workflow customization (Dev-Ops)</li>
                 </ul>
            </div>
        </div>
