--- a/en/newsdisplay.html
+++ b/en/newsdisplay.html
@@ -51,11 +51,9 @@
     
         <!--[if lt IE 9]>
             <div class="alert alert-warning flex" role="alert">
-          你的浏览器太久了，请升级再访问本网站 
-          <br>
-           Your Browser is too old.Please click the fllowing link to upgrade your browser.
-          <a href="http://browsehappy.com" class="alert-link">点我升级</a>
-        </div>
+                Your Browser is too old.Please click the fllowing link to upgrade your browser.
+                <a href="http://browsehappy.com" class="alert-link">Update</a>
+            </div>
         <![endif]-->
         
        <!-- Header Start -->
@@ -104,11 +102,11 @@
 				<!-- PC/Tablet Display Start -->
 				<div class="row d-none d-md-flex">
 					<div class="col-md-6">
-						<h1>新闻中心</h1>
-						<p>在这里, 了解关于互联网的一点一滴</p>
+						<h1>News Center</h1>
+						<p>Learn every bit of the Internet here.</p>
 					</div>
 					<div class="col-md-6" id="NewsListBox">
-						<p class="lead mt-3 mb-1">近期要闻</h3>
+						<p class="lead mt-3 mb-1">Recent News</h3>
 						<ul class="section-news-ul" id="NewsUL1">
 
 						</ul>
@@ -124,8 +122,8 @@
 				<!-- PC/Tablet Display Start -->
 				<!-- Mobile Title Display Start -->
 				<div class="row d-block d-md-none">
-					<h1 class="mt-4 mb-4">新闻中心</h1>
-					<p>在这里, 了解关于互联网的一点一滴</p>
+					<h1 class="mt-4 mb-4">News Center</h1>
+					<p>Learn every bit of the Internet here.</p>
 				</div>
 				<!-- Mobile Title Display End -->
 			</div>
@@ -145,8 +143,8 @@
                     </div>
                 </div>
 				<div class="container-fluid newsdisplay-news404box" style="display:none" id="NewsContent404Box">
-					<p class="lead text-center">错误发生了!</p>
-					<p class="text-center">在读取您的文章时发生了一个错误, 可能是因为ArticleID错误导致的, 请检查后联系网站管理员.</p>
+					<p class="lead text-center">An error occured!</p>
+					<p class="text-center">An error occured while reading your article, it might be due to the wrong ArticleID given in the URL. Please contact the website administrator after checking.</p>
 				</div>
 				<script src="../dynamicData/members.js"></script>
 				<script src="../dynamicData/newsList.js"></script>
