--- a/en/team.html
+++ b/en/team.html
@@ -53,11 +53,9 @@
     
         <!--[if lt IE 9]>
             <div class="alert alert-warning flex" role="alert">
-          你的浏览器太久了，请升级再访问本网站 
-          <br>
-           Your Browser is too old.Please click the fllowing link to upgrade your browser.
-          <a href="http://browsehappy.com" class="alert-link">点我升级</a>
-        </div>
+                Your Browser is too old.Please click the fllowing link to upgrade your browser.
+                <a href="http://browsehappy.com" class="alert-link">Update</a>
+            </div>
         <![endif]-->
         
         <!-- Header Start -->
@@ -108,10 +106,10 @@
                 <div class="container-fluid" id="NewsContentBox">
 
                 </div>
-                <div class="container-fluid" style="display:none" id="NewsContent404Box">
-                    <p class="lead text-center">错误发生了!</p>
-                    <p class="text-center">在读取您的文章时发生了一个错误, 可能是因为ArticleID错误导致的, 请检查后联系网站管理员.</p>
-                </div>
+                <div class="container-fluid newsdisplay-news404box" style="display:none" id="NewsContent404Box">
+					<p class="lead text-center">An error occured!</p>
+					<p class="text-center">An error occured while reading your article, it might be due to the wrong ArticleID given in the URL. Please contact the website administrator after checking.</p>
+				</div>
                 <script src="../dynamicData/members.js"></script>
                 <script src="../dynamicData/newsList.js"></script>
                 <script src="../js/newsDisplayLoading.js"></script>
@@ -120,7 +118,10 @@
                         var ArticleStillLoading = true;
                         var articleID = 0;
                         if(ArticleStillLoading){
-                            var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox",null,articleID,"en")
+                            var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox",null,articleID,"en");
+                            if(!ArticleSuccessfulLoaded){
+                                $("#NewsContent404Box").show();
+                            }
                         }
                     });
                 </script>
