--- a/cn/cooperation.html
+++ b/cn/cooperation.html
@@ -111,7 +111,7 @@
                     <li>企业/店面/活动 网络环境安全定制(场地WIFI安全和稳定性保证, 阻截ARP包, 进行AP隔离, 内容审核[拦截部分网址], 企业虚拟专用网络搭建)</li>
                     <li>绿色环保/科技交流活动合作(合作可以包含我们提供的: 免费宣传视频制作, 免费网页制作, 免费网站托管, 但形随意动将算作此次活动的赞助商或联合举办人)</li>
                     <li>团队联盟(共同项目研发, 互换友链, 共有资料交换, 可获得形随意动赠送的免费网站托管服务和邮箱托管服务)</li>
-                    <li>项目交互流程定制(Dev-Ops)</li>
+                    <li>项目交接流程定制(Dev-Ops)</li>
                 </ul>
            </div>
        </div>
