--- a/en/common_footer.html
+++ b/en/common_footer.html
@@ -2,9 +2,9 @@
     <div class="row d-flex justify-content-center footer-text">
         <div class="col-md-3">
             <ul class="footer-list">
-                <p class="section-item-in-text">友情链接</p>
+                <p class="section-item-in-text">Partners</p>
                 <li class="pt-2">
-                   <a href="http://www.afengteam.win/" class="text-dark">A风工作室</a>
+                   <a href="http://www.afengteam.win/" class="text-dark">AFeng Studio</a>
                 </li>
                 <li class="pt-2">
                     <a href="http://www.lanzainc.xyz" class="text-dark">Lanza,Inc</a>
@@ -13,18 +13,18 @@
         </div>
         <div class="col-md-3">
             <ul class="footer-list">
-               <p class="section-item-in-text">主要服务</p>
+               <p class="section-item-in-text">Major Services</p>
                <li class="pt-2">
                    <a href="http://cn.blueairhost.xyz/" class="text-dark">BlueAirHost</a>
                </li> 
                <li class="pt-2">
-                   <a href="javascript:void(0);" class="text-dark" data-toggle="modal" data-target="#wechatPublicAccountModal">微信公众号</a>
+                   <a href="javascript:void(0);" class="text-dark" data-toggle="modal" data-target="#wechatPublicAccountModal">Wechat Official Account</a>
                </li>
             </ul>
         </div>
         <div class="col-md-3">
             <ul class="footer-list">
-                <p class="section-item-in-text">联系方式</p>
+                <p class="section-item-in-text">Contact Info</p>
                 <li class="pt-2">
                     publicservice[AT]xsydsoft.com
                 </li>
@@ -36,7 +36,7 @@
     <hr class="w-75">
     <div class="row d-flex justify-content-center common-footer-lastline">
         <div class="col-md-6">
-            <span class="text-left" >Powered by 形随意动 &copy; 2013-2018</span>
+            <span class="text-left" >Powered by InterActive+ &copy; 2013-2018</span>
         </div>
         <!-- div class="col-sm-2">
             <span class="text-center"></span>
@@ -50,17 +50,17 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="wechatPublicAccountModalLabel">微信公众号</h5>
+          <h5 class="modal-title" id="wechatPublicAccountModalLabel">Wechat Official Account</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body text-center">
             <img src="../static/wechatQR.jpg" class="w-50" />
-            <p>扫码关注, 或搜索微信公众号 形随意动</p>
+            <p>Scan the QR Code to follow us</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
