--- a/en/index.html
+++ b/en/index.html
@@ -136,7 +136,7 @@
         <div class="section-text" id="section">
             <div class="container">
                 <div class="section-news" id="NewsBox">
-                    <h1 class="text-center section-text-tittle">新闻动态</h1>
+                    <h1 class="text-center section-text-tittle">News</h1>
                     <div class="row">
                         <div class="col-md-4">
                             <ul class="section-news-ul" id="NewsUL1">
@@ -162,26 +162,26 @@
                 </div>
 
                 <div class="section-one">
-                    <h1 class="text-center section-text-tittle">技术驾驭<span class="text-primary">创新</span>, 数字驱动<span class="text-primary">转型</span></h1>
-                    <h2 class="text-center section-text-little-tittle">传统的商业模式正在被新技术所颠覆，同时又以一种全新的模式融合再创新</h2>
+                    <h1 class="text-center section-text-tittle">Technology leads to <span class="text-primary">innovation</span>, Digital Science drives <span class="text-primary">transformation</span></h1>
+                    <h2 class="text-center section-text-little-tittle">Traditional ways of operating commerce are being totally subverted by new technologies, while getting mixed and re-innovated in a new way at the same time.</h2>
                     <div class="row mt-5" >
                         <div class="col-xs-4 col-md-6 pr-0" >
                             <img src="../static/sectionOneBG.jpg" class="rounded-left" width="100%" alt="Section Background Image">
                         </div>
                     	<div class="col-xs-10  col-md-6 bg-light rounded-right">
                             <div class="p-3">
-                                <h3 class="section-item-in-text">形随意动致力于改变世界创建和交付应用的方式，用技术的力量帮助企业实现数字化转型。</h3>
-                                <h3 class="section-item-in-text"> 准备好通向互联网之路了吗？</h3>
+                                <h3 class="section-item-in-text">Interactive+ strives to change the way our world create and handover apps. We use the power of technology to help enterprises transform into the digital world.</h3>
+                                <h3 class="section-item-in-text"> Are you ready to go into the Internet?</h3>
                             </div>
-                            <button class="btn btn-outline-primary m-3">了解更多</button>
+                            <button class="btn btn-outline-primary m-3">Learn More</button>
                         </div>
                    </div>
                 </div>
         
                 <div class="section-two">
-                    <h1 class="text-center section-text-tittle"><span class="text-primary">简化</span>编程难度, 推动<span class="text-primary">创新</span>力量</h1>
-                    <h2 class="text-center section-text-little-tittle">形随意动致力于实践跨平台应用编写, 开发了包括EasyCrossPlatform, BoostPHP等简化程序开发的框架</h2>
-                    <h2 class="text-center section-text-little-tittle"><span style="color:chocolate">形随意动</span>让开发到部署的每个流程简单易用</h2>
+                    <h1 class="text-center section-text-tittle"><span class="text-primary">Simplify</span> the complexity of programming, and push <span class="text-primary">innovations</span> forward</h1>
+                    <h2 class="text-center section-text-little-tittle">Interactive+ strives to make cross-platform apps and has developed cross-platform frameworks such as EasyCrossPlatform and BoostPHP to make programming simpler</h2>
+                    <h2 class="text-center section-text-little-tittle"><span style="color:chocolate">Interactive+</span> make every step from developing to deployment easy and comfortable</h2>
                 </div>
             </div>
         </div>
