--- a/en/members.html
+++ b/en/members.html
@@ -49,11 +49,9 @@
 	<body>
         <!--[if lt IE 9]>
             <div class="alert alert-warning flex" role="alert">
-          你的浏览器太久了，请升级再访问本网站 
-          <br>
-           Your Browser is too old.Please click the fllowing link to upgrade your browser.
-          <a href="http://browsehappy.com" class="alert-link">点我升级</a>
-        </div>
+                Your Browser is too old.Please click the fllowing link to upgrade your browser.
+                <a href="http://browsehappy.com" class="alert-link">Update</a>
+            </div>
         <![endif]-->
         
         <!-- Header Start -->
@@ -102,8 +100,8 @@
         <!-- Section Start -->
         <div class="section-member">
          	<div class="container">
-                <h1 class="section-text-tittle">成员</h1>
-                <h2 class="section-text-little-tittle">经历2次重组后, 形随意动团队变得更加精炼和有效率</h2>
+                <h1 class="section-text-tittle">Members</h1>
+                <h2 class="section-text-little-tittle">After 2 times of re-organization, our team has been more productive and efficient</h2>
                 <hr />
                     <div class="row" id="MemberDisplayRow">
                             <script src="../dynamicData/members.js"></script>
