Add Jumppage Util

--- a/cn/cooperation.html
+++ b/cn/cooperation.html
@@ -89,7 +89,7 @@
                     <span class="navbar-text dropdown " >
                         <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
                         <div class="dropdown-menu" aria-labelledby="ChooseLanguage" id="LoadLanguaage">
-                            <a class="dropdown-item" id="LangSelection_English" href="../?jumpLanguage=en">English</a>
+                            <a class="dropdown-item" id="LangSelection_English" href="../?jumpLanguage=en&jumpPage=cooperation.html">English</a>
                         </div>
                     </span>
                 </div>
