--- a/en/team.html
+++ b/en/team.html
@@ -90,7 +90,7 @@
                      <span class="navbar-text dropdown " >
                          <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
                          <div class="dropdown-menu" aria-labelledby="ChooseLanguage" id="LoadLanguaage">
-                             <a class="dropdown-item" id="LangSelection_Chinese" href="../?jumpLanguage=cn">简体中文</a>
+                             <a class="dropdown-item" id="LangSelection_Chinese" href="../?jumpLanguage=cn&jumpPage=team.html">简体中文</a>
                          </div>
                      </span>
                  </div>
