Update CN Team Page Title

--- a/cn/team.html
+++ b/cn/team.html
@@ -47,7 +47,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="keywords" content="形随意动, 形随意动介绍, 青少年编程, 团队, 开源" />
         <meta name="description" content="形随意动是求真, 务实的新纪元青少年编程团队. 形随意动致力于以符合时代的方法传递出领先于时代的精神. 形随意动是一个以云服务为核心的青少年编程兴趣组织, 专注于开源编程. 我们希望以以符合时代的方法传递出领先于时代的精神,且通过科技来推进社会发展." />
-        <title>形随意动 - 科技改变未来</title>
+        <title>形随意动 - 团队</title>
     </head>
     <body>
     
