Delete Afeng's Partner Link

--- a/en/common_footer.html
+++ b/en/common_footer.html
@@ -4,10 +4,7 @@
             <ul class="footer-list">
                 <p class="section-item-in-text">Partners</p>
                 <li class="pt-2">
-                   <a href="http://www.afengteam.win/" class="text-dark">AFeng Studio</a>
-                </li>
-                <li class="pt-2">
-                    <a href="http://www.lanzainc.xyz" class="text-dark">Lanza,Inc</a>
+                    <a href="http://www.lanzainc.xyz/" class="text-dark">Lanza,Inc</a>
                 </li>
             </ul>
         </div>
