--- a/en/common_footer.html
+++ b/en/common_footer.html
@@ -12,7 +12,7 @@
             <ul class="footer-list">
                <p class="section-item-in-text">Major Services</p>
                <li class="pt-2">
-                   <a href="http://cn.blueairhost.xyz/" class="text-dark">BlueAirHost</a>
+                   <a href="http://cn.blueairhost.xyz/" class="text-dark">BlueAirHost (Temporarily Unavailable)</a>
                </li> 
                <li class="pt-2">
                    <a href="javascript:void(0);" class="text-dark" data-toggle="modal" data-target="#wechatPublicAccountModal">Wechat Official Account</a>
