--- a/cn/common_footer.html
+++ b/cn/common_footer.html
@@ -12,7 +12,7 @@
             <ul class="footer-list">
                <p class="section-item-in-text">主要服务</p>
                <li class="pt-2">
-                   <a href="http://cn.blueairhost.xyz/" class="text-dark">BlueAirHost</a>
+                   <a href="http://cn.blueairhost.xyz/" class="text-dark">BlueAirHost (暂不可用)</a>
                </li> 
                <li class="pt-2">
                    <a href="javascript:void(0);" class="text-dark" data-toggle="modal" data-target="#wechatPublicAccountModal">微信公众号</a>
