Add TItle Change in News Display

--- a/cn/newsdisplay.html
+++ b/cn/newsdisplay.html
@@ -164,7 +164,7 @@
 						}
 						var articleID = parseInt(articleIDString);
 						if(ArticleStillLoading){
-							var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox","#NewsAuthorBox",articleID,"cn")
+							var ArticleSuccessfulLoaded = LoadArticle("title",""," | 形随意动动态","#NewsContentBox","#NewsAuthorBox",articleID,"cn")
                             if(!ArticleSuccessfulLoaded){
                                 $("#NewsContent404Box").show();
                             }
