--- a/en/newsdisplay.html
+++ b/en/newsdisplay.html
@@ -159,7 +159,7 @@
 						}
 						var articleID = parseInt(articleIDString);
 						if(ArticleStillLoading){
-							var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox","#NewsAuthorBox",articleID,"en")
+							var ArticleSuccessfulLoaded = LoadArticle("title",""," | InteractivePlus News","#NewsContentBox","#NewsAuthorBox",articleID,"en")
                             if(!ArticleSuccessfulLoaded){
                                 $("#NewsContent404Box").show();
                             }
