--- a/en/team.html
+++ b/en/team.html
@@ -118,7 +118,7 @@
                         var ArticleStillLoading = true;
                         var articleID = 0;
                         if(ArticleStillLoading){
-                            var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox",null,articleID,"en");
+                            var ArticleSuccessfulLoaded = LoadArticle(null,null,null,"#NewsContentBox",null,articleID,"en");
                             if(!ArticleSuccessfulLoaded){
                                 $("#NewsContent404Box").show();
                             }
