--- a/cn/team.html
+++ b/cn/team.html
@@ -123,7 +123,7 @@
                         var ArticleStillLoading = true;
                         var articleID = 0;
                         if(ArticleStillLoading){
-                            var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox",null,articleID,"cn")
+                            var ArticleSuccessfulLoaded = LoadArticle(null,null,null,"#NewsContentBox",null,articleID,"cn")
                         }
                     });
                 </script>
