Optimize Newspage Coloring

--- a/en/newsdisplay.html
+++ b/en/newsdisplay.html
@@ -97,7 +97,7 @@
      <!-- Header End -->
 
 		<!-- News TitleBox Area Start -->
-		<div class="container-fluid bg-info" id="NewsTitleBox" style="overflow:hidden">
+		<div class="container-fluid" id="NewsTitleBox" style="overflow:hidden; background-color: #DDDDDD; color:#000000;">
 			<div class="container">
 				<!-- PC/Tablet Display Start -->
 				<div class="row d-none d-md-flex">
