--- a/cn/cooperation.html
+++ b/cn/cooperation.html
@@ -88,6 +88,9 @@
                        <li lcass="nav-item">
                          <a class="nav-link nav-text" href="http://space.bilibili.com/449067532" target="_blank">哔哩哔哩</a>
                        </li>
+                       <li lcass="nav-item">
+                        <a class="nav-link nav-text" href="https://www.interactiveplus.org/2021Sum4WeekSprint-Release" target="_blank">四周冲刺</a>
+                       </li>
                     </ul>
                     <span class="navbar-text dropdown " >
                         <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
