Add TechDocs Link to Website

--- a/cn/newsdisplay.html
+++ b/cn/newsdisplay.html
@@ -90,7 +90,7 @@
                         <a class="nav-link nav-text" href="http://space.bilibili.com/449067532" target="_blank">哔哩哔哩</a>
                        </li>
                        <li lcass="nav-item">
-                        <a class="nav-link nav-text" href="https://www.interactiveplus.org/2021Sum4WeekSprint-Release" target="_blank">四周冲刺</a>
+                        <a class="nav-link nav-text" href="https://www.interactiveplus.org/TechDocs/" target="_blank">技术文档</a>
                        </li>
                     </ul>
                     <span class="navbar-text dropdown " >
