--- a/en/index.html
+++ b/en/index.html
@@ -74,21 +74,24 @@
                 
                  <div class="collapse navbar-collapse" id="nav-collapse">
                     <ul class="navbar-nav mr-auto">
-                       <li class="nav-item">
-                         <a class="nav-link nav-text" href="team.html" >Team</a>
-                       </li>
-                       <li class="nav-item">
-                          <a class="nav-link nav-text" href="members.html" >Members</a>
-                       </li>
-                       <li class="nav-item">
+                        <li class="nav-item">
+                            <a class="nav-link nav-text" href="team.html" >Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-text" href="members.html" >Members</a>
+                        </li>
+                        <li class="nav-item">
                         <a class="nav-link nav-text" href="cooperation.html">Cooperation</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link nav-text" href="https://github.com/InteractivePlus" target="_blank">OpenSource</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link nav-text" href="https://www.youtube.com/channel/UCXd3KqbobbqzehJqCapEyAg" target="_blank">Youtube</a>
-                       </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-text" href="https://github.com/InteractivePlus" target="_blank">OpenSource</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-text" href="https://www.youtube.com/channel/UCXd3KqbobbqzehJqCapEyAg" target="_blank">Youtube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-text" href="https://www.interactiveplus.org/TechDocs/" target="_blank">Technical Docs</a>
+                        </li>
                     </ul>
                     <span class="navbar-text dropdown " >
                         <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
