--- a/en/newsdisplay.html
+++ b/en/newsdisplay.html
@@ -87,6 +87,9 @@
                     <li class="nav-item">
                         <a class="nav-link nav-text" href="https://www.youtube.com/channel/UCXd3KqbobbqzehJqCapEyAg" target="_blank">Youtube</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-text" href="https://www.interactiveplus.org/TechDocs/" target="_blank">Technical Docs</a>
+                    </li>
                  </ul>
                  <span class="navbar-text dropdown " >
                      <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
